* Run as watchface. * Disable all timers. * Bind buttons to events. Select draws next frame. Up swarms to new position.   Down swarms to a static hardcoded time.

--- a/appinfo.json
+++ b/appinfo.json
@@ -6,7 +6,7 @@
   "versionCode": 4,
   "versionLabel": "2.1.1",
   "watchapp": {
-    "watchface": true
+    "watchface": false
   },
   "appKeys": {},
   "resources": {
